# griffe-typingdoc-repro

./: LICENSE  mkdocs.yml  pyproject.toml  test.py  test_attributes.py  test_parameters.py
docs/: index.md
